# Teaquel

./: Teaquel.cabal
Haskell/: Main.hs
